# blib

./: CMakeLists.txt  Doxyfile
include/: blib.hpp
src/: blib.cpp
test/: test.cpp
